--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -15,17 +15,22 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
+
       - name: Set up Node
         uses: actions/setup-node@v4
         with:
           node-version: 20
-          cache: 'npm'
+          # הסרנו את ה-cache כי אין קובץ package-lock.json
+
       - name: Install dependencies
-        run: npm install
+        # הוספת legacy-peer-deps עוזרת למנוע שגיאות התקנה בפרויקטים של AI
+        run: npm install --legacy-peer-deps
+
       - name: Build
         run: npm run build
         env:
           VITE_GEMINI_API_KEY: ${{ secrets.VITE_GEMINI_API_KEY }}
+
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
